cabal-version:      3.0
name:               sydml
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             crumbtoo
maintainer:         crumb@disroot.org
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        -- AllowAmbiguousTypes
        DataKinds
        DeriveGeneric
        DuplicateRecordFields
        FlexibleContexts
        NoMonomorphismRestriction
        TypeApplications

library
    import:           warnings, extensions
    exposed-modules:  Sydc.Types
                    , Sydc.Error
                    , Sydc.Language
                    , Language.Scheme.Spec
                    , SydPrelude
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
                    , generic-lens ^>=2.2.0.0
                    , lens >=5.0.0 && <=6.0.0
                    , recursion-schemes >=5.0.0 && <=6.0.0
                    , text ^>=2.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable sydc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        sydml

    hs-source-dirs:   app
    default-language: GHC2021

test-suite sydml-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: base ^>=4.19.1.0
                 , hspec == 2.*
                 , sydml

