cabal-version:      3.0
name:               sydml
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             crumbtoo
maintainer:         crumb@disroot.org
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        -- AllowAmbiguousTypes
        DataKinds
        DeriveGeneric
        DuplicateRecordFields
        FlexibleContexts
        -- NoMonomorphismRestriction
        TypeApplications
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        GADTs
        StandaloneDeriving
        DerivingVia
        DuplicateRecordFields
        GeneralisedNewtypeDeriving
        LambdaCase
        BlockArguments
        DeriveTraversable
        TypeFamilies
        OverloadedLabels
    ghc-options: -fdefer-typed-holes

library
    import:           warnings, extensions
    exposed-modules:  Sydc.Types
                    , Sydc.Error
                    , Sydc.Monad
                    , Sydc
                    , Sydc.Language
                    , Data.Sexp
                    , Language.Scheme.Syntax
                    , Language.Scheme.Spec
                    , Language.Scheme.Eval
                    , Language.Scheme
                    , Language.TreeIL
                    , Language.TreeIL.Syntax
                    , SydPrelude
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
                    , generic-lens ^>=2.2.0.0
                    , lens >=5.0.0 && <=6.0.0
                    , recursion-schemes >=5.0.0 && <=6.0.0
                    , monadic-recursion-schemes
                    , data-fix
                    , text ^>=2.0.0
                    , s-cargot
                    , megaparsec
                    , parsec
                    , mtl
                    , hashable
                    , unordered-containers
                    , containers
    hs-source-dirs:   src
    default-language: GHC2021

executable sydc
    import:           warnings, extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.19.1.0
                 , sydml
                 , generic-lens ^>=2.2.0.0
                 , lens >=5.0.0 && <=6.0.0
                 , recursion-schemes >=5.0.0 && <=6.0.0
                 , rock >=0.3.1.0 && <=0.4.0.0
                 , hashable
                 , text ^>=2.0.0
                 , some
                 , dependent-sum-template ^>=0.2.0.1
                 , climb ^>=0.5.0
                 , lsp

    hs-source-dirs:   app
    default-language: GHC2021

test-suite sydml-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: base ^>=4.19.1.0
                 , hspec == 2.*
                 , sydml

